products/edge/4.0/deploy-running-docker/index.md
# Running in a Docker Container


For a single-instance deployment, start the container with the Docker command below:

```shell
docker run -d -e CRIBL_EDGE=1 \
 -p 9420:9420 \
 -v /var/run/appscope:/var/run/appscope \
 -v /var/run/docker.sock:/var/run/docker.sock \
 -v /:/hostfs:ro \
 --privileged \
 --restart unless-stopped \
 --name cribl-edge \
 cribl/cribl:latest
```

For a distributed deployment, start the container with the Docker command below:

```shell
docker run -d \
 -e CRIBL_DIST_MODE=managed-edge \
 -e CRIBL_DIST_LEADER_URL=tcp://tokenhere@leaderhere:4200 \
 -v /var/run/appscope:/var/run/appscope \
 -v /var/run/docker.sock:/var/run/docker.sock \
 -v /:/hostfs:ro \
 --privileged \
 --restart unless-stopped \
 --name cribl-edge \
 cribl/cribl:latest
```

> With a Leader on Cribl.Cloud, encryption is enabled by default. Set the hybrid worker's `CRIBL_DIST_LEADER_URL` [environment variable](/stream/deploy-distributed#environment-variables) to begin with the `tls://` protocol. For example:  
> 
> ```
> CRIBL_DIST_LEADER_URL=tls://<token>@logstream-<tenant>.cribl.cloud:4200
> ```
>
{.box .cloud}

Once that’s running, the UI displays on `http://localhost:9420/`

The ` -v /var/run/appscope:/var/run/appscope \` line exposes the Unix domain socket for the AppScope Source so that it's accessible to the `scope` application on the host, and in other containers that mount that same directory.

You can now start configuring Cribl Edge with [Sources](/Edge/sources) and [Destinations](/Edge/destinations), or start creating [Routes](/Edge/routes) and [Pipelines](/Edge/pipelines).

## Overriding Default Ports {#ports-override}

Default ports can be overridden in the following [configuration files](/Edge/configuration-files): 

* Edge UI port (`9420`): Default definitions for `host`, `port`, and other settings are set in `$CRIBL_HOME/default/cribl/cribl.yml`, and can be overridden by defining alternatives in `$CRIBL_HOME/local/cribl/cribl.yml`.

* Data Ports, for example HTTP In (`10080`), TCPJSON in (`10420`) have default definitions for `host`, `port` and other settings defined in `$CRIBL_HOME/default/cribl/inputs.yml`, and can be overridden by defining alternatives in `$CRIBL_HOME/local/cribl/inputs.yml`.

> In the case of an API port conflict, the process will retry binding for 10 minutes before exiting.
>
{.box .info}

## Updating the Docker Image

Cribl recommends that you always use our latest stable container image wherever possible. This will provide bug fixes and security patches for any vulnerabilities that Cribl has discovered when scanning the base image OS, dependencies, and our own software.

Note that the sample `docker-compose.yml` provided above automatically specifies the latest stable image at:

```yaml
image: cribl/cribl:latest
```

You can explicitly pull the latest stable image with this CLI command:

```shell
docker pull cribl/cribl:latest
```

### Updating the Packaged OS

Cribl strongly recommends that you monitor and patch vulnerabilities in the [packaged OS](#defaults). The base OS might have been updated with fixes for new vulnerabilities discovered after Cribl published its container images. This is especially important if you choose to keep an earlier Cribl image in production.

You can update the base OS image by updating the package, as shown in the following `Dockerfile`. This example assumes you're updating Cribl's `latest` image:

```yaml title='Dockerfile'
FROM cribl/cribl:latest
RUN apt-get update && \
    apt-get -y upgrade dpkg
```

## Troubleshooting {#troubleshooting}

When you deploy containers via [Kubernetes](/stream/deploy-kubernetes) in `managed-edge` mode, this Node will – after applying the first config bundle from the Leader – listen on the Fleet's configured **API Server Settings** > **Host**.

If you encounter spurious health-check failures, change that **Host**  setting to `0.0.0.0` (rather than the default `127.0.0.1`, which can block health checks).
